src/main/kotlin/com/dfsek/terra/codetool/stringcomp/blockstate.bnf
{
    parserClass="com.dfsek.terra.codetool.stringcomp.BlockstateParser"
  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"
  psiClassPrefix="Stringcomp"
  psiImplClassSuffix="Impl"
  psiPackage="com.dfsek.terra.codetool.stringcomp.psi"
  psiImplPackage="com.dfsek.terra.codetool.stringcomp.psi.impl"
  elementTypeHolderClass="com.dfsek.terra.codetool.stringcomp.psi.StringcompTypes"
  elementTypeClass="com.dfsek.terra.codetool.stringcomp.StringcompElementType"
  tokenTypeClass="com.dfsek.terra.codetool.stringcomp.StringcompTokenType"

  tokens = [
    COLON = ":"

    ID = "regexp:[a-zA-Z_][a-zA-Z0-9_]*"
    VALUE = "regexp:[a-zA-Z0-9_]*"
    LBRACK = "["
    RBRACK = "]"
    EQ = "="
    COMMA = ","

    ANY = "regexp:.*"
  ]
}

file ::= blockstate? ANY*
blockstate ::= ID COLON? ID? statedefs?
statedefs ::= LBRACK args? RBRACK?
args ::= ID EQ? VALUE? COMMA? args?
